--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <section class="container__cursos">
             <div class="cursos-itens">
-                <img src="assets/images/Notebook.svg" alt="notebook">
+                <img src="assets/images/notebook.svg" alt="notebook">
                 <h3>Baixe seus cursos</h3>
             </div>
         </section>
@@ -92,4 +92,5 @@
         </div>
     </footer>
 </body>
+
 </html>
